[package]
name = "log_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.1", default-features = false, features = ["accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow", # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
] }
egui = "0.26.1"
log = "0.4"

anyhow = "1.0.79"
egui_extras = "0.26.1"
futures = "0.3.30"
rfd = { version = "0.13.0", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

[dev-dependencies]
insta = { version = "1.34.0", features = ["ron", "glob", "yaml"] }
pretty_assertions = "1.4.0"
ron = "0.8.1"
rstest = "0.18.2"

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
