[package]
name = "log_viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30", default-features = false, features = [ #
  "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow", # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
  "wayland", # To support Linux (and CI)
  "x11",] }
egui = "0.30"
log = "0.4.22"

anyhow = "1.0.95"
egui_extras = "0.30"
futures = "0.3.31"
rfd = { version = "0.15", default-features = false, features = ["gtk3", "tokio"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.49"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

[dev-dependencies]
insta = { version = "1.41.1", features = ["ron", "glob", "yaml"] }
pretty_assertions = "1.4.1"
ron = "0.8.1"
rstest = "0.23"
strum = { version = "0.26.3", features = ["derive"] }

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
